Fix grid gap on skills

--- a/abstractopia.css
+++ b/abstractopia.css
@@ -189,7 +189,8 @@ h4 {
 .skill-grid .grid{
   display: inline-flex;
   flex-wrap: wrap;
-  gap: 8px;
+  column-gap: 8px;
+  grid-row-gap: 8px;
 }
 
 .skill-grid p {
